# Panos

./: .gitignore  Cargo.toml  panos.toml
src/: lib.rs  main.rs
src/cli/: args.rs
src/config/: loader.rs
src/file_ops/: hashing.rs  history.rs  integrity.rs  mod.rs  mover.rs  remover.rs
src/organizer/: mod.rs  scanner.rs  undo.rs  watcher.rs
src/rules/: matcher.rs
src/ui/: mod.rs  reporter.rs
tests/: main_test.rs  mod_test.rs
tests/common/: mod.rs
tests/config/: loader_test.rs
tests/file_ops/: hashing_test.rs  history_test.rs  integrity_test.rs  mod.rs  remover_test.rs
tests/organizer/: scanner_test.rs  undo_test.rs  watcher_test.rs
tests/rules/: matcher_test.rs
