[package]
name = "Panos"
version = "0.1.0"
edition = "2024"
authors = ["Nonbangkok"]
description = "Universal File Organizer OS"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
