[package]
name = "Panos"
version = "0.1.0"
edition = "2024"
authors = ["Nonbangkok"]
description = "Universal File Organizer OS"

[lib]
name = "panos"
path = "src/lib.rs"
 
[[bin]]
name = "panos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
toml = "1.1.2"
walkdir = "2.5.0"
anyhow = "1.0.102"
tracing = "0.1.44"
globset = "0.4.15"
notify = "8.2.0"
serde_json = "1.0.149"
rayon = "1.12.0"
indicatif = "0.18.4"
twox-hash = "2.1.0"
hex = "0.4.3"
tokenizers = "0.22.2"
ort = "2.0.0-rc.12"

[dev-dependencies]
tempfile = "3.27.0"